[package]
name = "pumopm"
version = "0.1.0"
authors = ["Lucien Cartier-Tilet <lucien@phundrak.com>"]
edition = "2018"
description = "Simple power manager for systemd-based Linux"
repository = "https://labs.phundrak.com/phundrak/pumopm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.5"
notify-rust = "4"
