[package]
name = "pumopm"
version = "0.1.0"
authors = ["Lucien Cartier-Tilet <lucien@phundrak.com>"]
edition = "2018"
description = "Simple power manager for systemd-based Linux"
repository = "https://labs.phundrak.com/phundrak/pumopm"
license = "GPL-3.0-or-later"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = { version = "0.7.5", default-features = false }
notify-rust = { version = "4", default-features = false }
clap = { version = "3.0.0-beta.1", default-features = false, features = ["std", "derive"] }
time = { version = "0.2", default-features = false }
